blackbox-log/tests/snapshots/snapshots__snapshot@btfl_001.bbl.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/btfl_001.bbl
---
[
  Ok(LogSnapshot(
    headers: Headers(
      version: V2,
      firmware_revision: "Betaflight 4.2.11 (948ba6339) STM32F7X2",
      firmware_kind: Betaflight,
      board_info: "ZEEZ ZEEZF7V2",
      craft_name: "",
      vbat_reference: 2466,
      vbat_scale: 110,
      current_meter: CurrentMeterConfig(
        offset: 0,
        scale: 250,
      ),
      acceleration_1g: 2048,
      gyro_scale: 1.0,
      min_throttle: 1070,
      motor_output_range: MotorOutputRange(158, 2047),
    ),
    events: [
      SyncBeep(32887122),
      FlightMode(
        flags: 0,
        last_flags: 1,
      ),
      Disarm(4),
      End,
    ],
    main: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "loopIteration",
          min: 0,
          max: 1537,
          unique: 98,
          histogram: (7, 7, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6),
        ),
        FieldSnapshot(
          name: "time",
          min: 0,
          max: 33206271,
          unique: 98,
          histogram: (0, 1, 37, 5, 5, 5, 6, 1, 2, 3, 1, 11, 4, 0, 10, 7),
        ),
        FieldSnapshot(
          name: "axisP[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisP[1]",
          min: -2,
          max: 0,
          unique: 2,
          histogram: (97, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisP[2]",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (94, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisI[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisD[0]",
          min: -2,
          max: 2,
          unique: 5,
          histogram: (80, 16, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisD[1]",
          min: -4,
          max: 2,
          unique: 6,
          histogram: (91, 4, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisF[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisF[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisF[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[2]",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (37, 61, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rcCommand[3]",
          min: 0,
          max: 1000,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[3]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "vbatLatest",
          min: 0,
          max: 2463,
          unique: 4,
          histogram: (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10, 39, 0, 19, 0, 30),
        ),
        FieldSnapshot(
          name: "amperageLatest",
          min: 0,
          max: 184,
          unique: 8,
          histogram: (70, 0, 0, 0, 8, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "BaroAlt",
          min: 0,
          max: 279,
          unique: 7,
          histogram: (0, 12, 0, 0, 0, 12, 13, 6, 0, 0, 0, 0, 5, 25, 25, 0),
        ),
        FieldSnapshot(
          name: "rssi",
          min: 0,
          max: 784,
          unique: 2,
          histogram: (59, 0, 0, 0, 0, 0, 39, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "gyroADC[0]",
          min: -1,
          max: 0,
          unique: 2,
          histogram: (94, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "gyroADC[1]",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (97, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "gyroADC[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "accSmooth[0]",
          min: -56,
          max: 0,
          unique: 18,
          histogram: (3, 2, 2, 2, 4, 3, 5, 5, 2, 4, 7, 17, 17, 10, 8, 7),
        ),
        FieldSnapshot(
          name: "accSmooth[1]",
          min: -40,
          max: 0,
          unique: 26,
          histogram: (14, 3, 3, 3, 3, 3, 2, 4, 11, 5, 5, 4, 6, 8, 9, 15),
        ),
        FieldSnapshot(
          name: "accSmooth[2]",
          min: 0,
          max: 2061,
          unique: 14,
          histogram: (1, 8, 9, 5, 2, 4, 3, 14, 9, 9, 20, 6, 7, 1, 0, 0),
        ),
        FieldSnapshot(
          name: "motor[0]",
          min: 0,
          max: 172,
          unique: 16,
          histogram: (11, 10, 4, 5, 2, 0, 0, 1, 0, 2, 7, 1, 10, 15, 19, 11),
        ),
        FieldSnapshot(
          name: "motor[1]",
          min: 0,
          max: 183,
          unique: 16,
          histogram: (8, 16, 15, 6, 9, 10, 6, 4, 1, 2, 2, 0, 0, 1, 11, 7),
        ),
        FieldSnapshot(
          name: "motor[2]",
          min: 0,
          max: 179,
          unique: 17,
          histogram: (8, 10, 19, 7, 2, 6, 3, 3, 3, 1, 1, 0, 3, 4, 13, 15),
        ),
        FieldSnapshot(
          name: "motor[3]",
          min: 0,
          max: 183,
          unique: 15,
          histogram: (10, 12, 8, 9, 4, 4, 1, 4, 0, 1, 2, 0, 0, 16, 18, 9),
        ),
      ],
    ),
    slow: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "flightModeFlags",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (14, 84, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "stateFlags",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "failsafePhase",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rxSignalReceived",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 97, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rxFlightChannelsValid",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 97, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ],
    ),
  )),
  Ok(LogSnapshot(
    headers: Headers(
      version: V2,
      firmware_revision: "Betaflight 4.2.11 (948ba6339) STM32F7X2",
      firmware_kind: Betaflight,
      board_info: "ZEEZ ZEEZF7V2",
      craft_name: "",
      vbat_reference: 2439,
      vbat_scale: 110,
      current_meter: CurrentMeterConfig(
        offset: 0,
        scale: 250,
      ),
      acceleration_1g: 2048,
      gyro_scale: 1.0,
      min_throttle: 1070,
      motor_output_range: MotorOutputRange(158, 2047),
    ),
    events: [
      SyncBeep(191753984),
      FlightMode(
        flags: 0,
        last_flags: 1,
      ),
      Disarm(4),
      End,
    ],
    main: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "loopIteration",
          min: 0,
          max: 398092,
          unique: 24893,
          histogram: (1556, 1556, 1556, 1556, 1556, 1556, 1556, 1556, 1556, 1556, 1556, 1556, 1556, 1555, 1555, 1555),
        ),
        FieldSnapshot(
          name: "time",
          min: 0,
          max: 241860649,
          unique: 24893,
          histogram: (1464, 1665, 1677, 1352, 1720, 945, 1801, 1696, 1465, 1765, 1794, 1336, 1670, 1020, 1814, 1709),
        ),
        FieldSnapshot(
          name: "axisP[0]",
          min: -41,
          max: 35,
          unique: 77,
          histogram: (2736, 2726, 2461, 2272, 2063, 1736, 1691, 1553, 1287, 1127, 1006, 1036, 906, 845, 768, 680),
        ),
        FieldSnapshot(
          name: "axisP[1]",
          min: -37,
          max: 40,
          unique: 78,
          histogram: (2777, 2740, 2379, 2220, 2092, 2038, 2011, 1805, 1516, 1224, 1054, 910, 704, 526, 457, 440),
        ),
        FieldSnapshot(
          name: "axisP[2]",
          min: -103,
          max: 79,
          unique: 183,
          histogram: (1923, 1971, 1960, 1641, 1555, 1515, 1572, 1603, 1530, 1405, 1418, 1410, 1244, 1414, 1406, 1326),
        ),
        FieldSnapshot(
          name: "axisI[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisD[0]",
          min: -15,
          max: 15,
          unique: 30,
          histogram: (10599, 7212, 3755, 1723, 736, 401, 207, 120, 62, 35, 23, 7, 4, 3, 1, 5),
        ),
        FieldSnapshot(
          name: "axisD[1]",
          min: -18,
          max: 11,
          unique: 29,
          histogram: (9945, 7163, 4060, 1915, 877, 441, 235, 139, 54, 34, 10, 7, 3, 5, 2, 3),
        ),
        FieldSnapshot(
          name: "axisF[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisF[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisF[2]",
          min: -1,
          max: 1,
          unique: 3,
          histogram: (24810, 83, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rcCommand[0]",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (24320, 573, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rcCommand[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[2]",
          min: 0,
          max: 3,
          unique: 4,
          histogram: (9036, 15691, 102, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rcCommand[3]",
          min: 0,
          max: 1000,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[2]",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (24757, 136, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "setpoint[3]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "vbatLatest",
          min: 0,
          max: 2507,
          unique: 42,
          histogram: (1445, 1567, 1977, 1328, 1795, 1748, 1289, 1477, 1666, 1080, 2428, 780, 1960, 1177, 1498, 1678),
        ),
        FieldSnapshot(
          name: "amperageLatest",
          min: 0,
          max: 948,
          unique: 158,
          histogram: (10529, 0, 0, 0, 5194, 0, 0, 0, 4465, 0, 0, 0, 4705, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "BaroAlt",
          min: 0,
          max: 441,
          unique: 309,
          histogram: (1478, 1499, 1673, 1409, 2256, 2252, 1167, 1709, 2326, 1172, 946, 910, 951, 1662, 1727, 1756),
        ),
        FieldSnapshot(
          name: "rssi",
          min: 0,
          max: 914,
          unique: 107,
          histogram: (1794, 1193, 1315, 1294, 1392, 1293, 1494, 1987, 1991, 1590, 1694, 1490, 1292, 2391, 1096, 1587),
        ),
        FieldSnapshot(
          name: "gyroADC[0]",
          min: -22,
          max: 26,
          unique: 49,
          histogram: (2272, 3865, 3285, 2815, 2327, 1933, 1450, 1296, 1230, 1054, 850, 767, 549, 422, 383, 395),
        ),
        FieldSnapshot(
          name: "gyroADC[1]",
          min: -23,
          max: 21,
          unique: 45,
          histogram: (2602, 4321, 3455, 3425, 3115, 2350, 1546, 1095, 829, 592, 516, 497, 238, 159, 81, 72),
        ),
        FieldSnapshot(
          name: "gyroADC[2]",
          min: -46,
          max: 59,
          unique: 106,
          histogram: (1524, 2561, 2415, 2023, 2029, 1700, 1687, 1600, 1553, 1771, 1501, 865, 867, 1038, 956, 803),
        ),
        FieldSnapshot(
          name: "accSmooth[0]",
          min: -1058,
          max: 0,
          unique: 843,
          histogram: (1507, 1567, 1497, 1586, 1514, 1511, 1567, 1564, 1515, 1583, 1584, 1572, 1580, 1593, 1565, 1588),
        ),
        FieldSnapshot(
          name: "accSmooth[1]",
          min: -490,
          max: 321,
          unique: 795,
          histogram: (1562, 1565, 1596, 1586, 1623, 1567, 1609, 1575, 1569, 1584, 1596, 1585, 1514, 1424, 1470, 1468),
        ),
        FieldSnapshot(
          name: "accSmooth[2]",
          min: 0,
          max: 2166,
          unique: 503,
          histogram: (1537, 1570, 1561, 1472, 1455, 1471, 1564, 1586, 1504, 1573, 1582, 1546, 1623, 1645, 1615, 1589),
        ),
        FieldSnapshot(
          name: "motor[0]",
          min: 0,
          max: 604,
          unique: 432,
          histogram: (1362, 1401, 1431, 1362, 1374, 1438, 1370, 1316, 1397, 1329, 1309, 1436, 1622, 2241, 2934, 1571),
        ),
        FieldSnapshot(
          name: "motor[1]",
          min: 0,
          max: 531,
          unique: 331,
          histogram: (973, 901, 869, 856, 846, 841, 813, 872, 868, 922, 940, 1092, 3982, 8061, 1074, 983),
        ),
        FieldSnapshot(
          name: "motor[2]",
          min: 0,
          max: 515,
          unique: 335,
          histogram: (1379, 1384, 1368, 1318, 1231, 1228, 1307, 1257, 1285, 1322, 1245, 1381, 2476, 3718, 1482, 1512),
        ),
        FieldSnapshot(
          name: "motor[3]",
          min: 0,
          max: 681,
          unique: 505,
          histogram: (1321, 1267, 1289, 1251, 1208, 1178, 1207, 1134, 1137, 1230, 1178, 1217, 1964, 5422, 1508, 1382),
        ),
      ],
    ),
    slow: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "flightModeFlags",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (15, 24878, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "stateFlags",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "failsafePhase",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rxSignalReceived",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 24892, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rxFlightChannelsValid",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 24892, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ],
    ),
  )),
]
