blackbox-log/tests/snapshots/snapshots__snapshot@btfl_all.bbl.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/btfl_all.bbl
---
[
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
  Err(Corrupted),
]
