blackbox-log/tests/snapshots/snapshots__snapshot@error-recovery.bbl.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/error-recovery.bbl
---
[
  Ok(LogSnapshot(
    headers: Headers(
      version: V2,
      firmware_revision: "Betaflight 4.2.11 (948ba6339) STM32F7X2",
      firmware_kind: Betaflight,
      board_info: "ZEEZ ZEEZF7V2",
      craft_name: "",
      vbat_reference: 2466,
      vbat_scale: 110,
      current_meter: CurrentMeterConfig(
        offset: 0,
        scale: 250,
      ),
      acceleration_1g: 2048,
      gyro_scale: 1.0,
      min_throttle: 1070,
      motor_output_range: MotorOutputRange(158, 2047),
    ),
    events: [
      SyncBeep(32887122),
      Disarm(4),
      End,
    ],
    main: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "loopIteration",
          min: 0,
          max: 256,
          unique: 2,
          histogram: (2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "time",
          min: 0,
          max: 33043646,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1),
        ),
        FieldSnapshot(
          name: "axisP[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisP[1]",
          min: -2,
          max: 0,
          unique: 2,
          histogram: (1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisP[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisI[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisD[0]",
          min: -1,
          max: 0,
          unique: 2,
          histogram: (1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisD[1]",
          min: -3,
          max: 0,
          unique: 2,
          histogram: (1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisF[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisF[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "axisF[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[2]",
          min: 0,
          max: 1,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rcCommand[3]",
          min: 0,
          max: 1000,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[1]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "setpoint[3]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "vbatLatest",
          min: 0,
          max: 2463,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1),
        ),
        FieldSnapshot(
          name: "amperageLatest",
          min: 0,
          max: 76,
          unique: 2,
          histogram: (1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "BaroAlt",
          min: 0,
          max: 279,
          unique: 2,
          histogram: (0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rssi",
          min: 0,
          max: 774,
          unique: 1,
        ),
        FieldSnapshot(
          name: "gyroADC[0]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "gyroADC[1]",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "gyroADC[2]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "accSmooth[0]",
          min: -44,
          max: 0,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "accSmooth[1]",
          min: -40,
          max: 0,
          unique: 2,
          histogram: (0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "accSmooth[2]",
          min: 0,
          max: 2056,
          unique: 2,
          histogram: (0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "motor[0]",
          min: 0,
          max: 169,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0),
        ),
        FieldSnapshot(
          name: "motor[1]",
          min: 0,
          max: 183,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "motor[2]",
          min: 0,
          max: 161,
          unique: 2,
          histogram: (0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1),
        ),
        FieldSnapshot(
          name: "motor[3]",
          min: 0,
          max: 183,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0),
        ),
      ],
    ),
    slow: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "flightModeFlags",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "stateFlags",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "failsafePhase",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rxSignalReceived",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rxFlightChannelsValid",
          min: 0,
          max: 0,
          unique: 1,
        ),
      ],
    ),
  )),
]
